# minilab

./: .gitignore  README.md  pyproject.toml
minilab/: __init__.py  alignment.py  alignment_common.py  base.py  checks.py  config.py  data.py  diagnostics.py  diffusion.py  diffusion_alignment.py  diffusion_sampling.py  evalbench.py  evaluation.py  generation.py  hf_cache.py  hf_presets.py  losses.py  online_rl.py  preference_alignment.py  presets.py  registry.py  trainer.py  verifiers.py
minilab/models/: __init__.py  block_diffusion.py  byte_latent.py  d3pm.py  diffusion_base.py  gpt.py  hybrid.py  hymba.py  mamba.py  mamba2.py  mdlm.py  sedd.py  transformer_utils.py  xlstm.py
minilab/nn/: __init__.py  architecture.py  attention.py  attention_common.py  attention_compressed.py  attention_latent.py  attention_linear.py  attention_sparse.py  attention_standard.py  connections.py  diffusion.py  ffn.py  moe.py  norm.py  optimizers.py  position.py  ssm.py
minilab/tasks/: __init__.py  gsm8k.py
minilab/tokenizers/: __init__.py  _state.py  bpe.py  byte.py  character.py  hf.py  unigram.py  wordpiece.py
recipes/hf_to_native/: README.md
recipes/local_training/: README.md
scripts/: common.py  compare_attention.py  compare_connection.py  compare_diffusion.py  compare_position.py  dpo.py  dpo_diffusion.py  estimate_vram.py  evaluate.py  evaluate_text8.py  generate.py  grpo.py  grpo_diffusion.py  hf_common.py  hf_generate.py  hf_inspect.py  import_hf.py  preference.py  pretrain_diffusion.py  pretrain_lm.py  sample_diffusion.py  sft.py  sft_diffusion.py  train_tokenizer.py
(+79 files in other folders)
